add png download button

--- a/index.html
+++ b/index.html
@@ -26,18 +26,30 @@
           <h3>CPU Usage</h3>
           <input type="file" id="fileInput" style="display: none" />
           <canvas id="cpuChartCanvas" width="400" height="150"></canvas>
+          <button class="btn btn-light btn-sm download-btn float-end mb-2">
+            Download as PNG
+          </button>
         </div>
         <div class="col-12 my-4 text-center">
           <h3>Memory Usage</h3>
           <canvas id="memoryChartCanvas" width="400" height="150"></canvas>
+          <button class="btn btn-light btn-sm download-btn float-end mb-2">
+            Download as PNG
+          </button>
         </div>
         <div class="col-12 my-4 text-center">
           <h3>Swap Usage</h3>
           <canvas id="swapChartCanvas" width="400" height="150"></canvas>
+          <button class="btn btn-light btn-sm download-btn float-end mb-2">
+            Download as PNG
+          </button>
         </div>
         <div class="col-12 my-4 text-center">
           <h3>IO Usage</h3>
           <canvas id="ioChartCanvas" width="400" height="150"></canvas>
+          <button class="btn btn-light btn-sm download-btn float-end mb-2">
+            Download as PNG
+          </button>
         </div>
       </div>
     </div>
