--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         Please drag and drop the results of vmstat, or click on the graph to
         specify a file.<br />
         Please provide the results outputted by running `vmstat 1 -t | tee
-        vmstat.log`
+        vmstat.log`<br>
+        <span class="text-success">All data is stored locally and will not be sent externally.</span>
       </p>
       <div class="row">
         <div class="col-12 my-4 text-center">
